--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+*csv filter=lfs diff=lfs merge=lfs -text
 data/data-1.csv.gz filter=lfs diff=lfs merge=lfs -text
 *.csv.gz filter=lfs diff=lfs merge=lfs -text
